[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.218", features = ["serde_derive"] }
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
http = "1.1.0"
uuid = { version = "1.15.1", features = ["v4"] }
serde_json = "1.0.140"
mongodb = "3.2.3"
bson = "2.14.0"
